Severel Bug Fixes and En hancements
Compiler warnings eliminated.
Use of Lambdas and Diamonds added.
New sample for device class IndividualRecognition added.
New class ThreadHandler added for easier support of requests-to-finish.
Reset method for SyncObject instances added.
New method printRecVoidItem added to FiscalPrinter sample to support versions prior to 1.14.
Use of method removeOuterArraySpecifier forces for logging purposes. Several validation checks adjusted.
Factory classes: Method addDevice with JposEntry parameter present for all device classes now, method validateJposConfiguration added for easier initialization and to retrieve service specific configuration properties.
JposCommonProperties method checkProperties added to support service specific configuration entries sin jpos.xml: For all devices, Jpos.xml properties AllowAlwaysSetProperties, MaximumConfirmationEventWaitingTime, StrictFIFOEventHandling and jposVersion (from jpos tag) will be processed separately for each service; jposVersion will be used as source for the device service version.
JposDevice: get...Properties methods (... for all device classes) throw JposException now instead of returning a null pointer for simpler validity check in class factories.
When displaying a message box, SynchronizedMessageBox restores previous position, if possible.
UdpIOProcessor and UdpClientIOProcessor have been rewritten, Both classes are derived from the new abstract class UdpBaseIOProcessor now.